@@ -8,7 +8,7 @@
     <artifactId>service</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>server</name>
+    <name>service</name>
 
     <parent>
         <artifactId>junitmonitor</artifactId>
@@ -16,6 +16,20 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <forkMode>always</forkMode>
+                    <forkCount>3</forkCount>
+                    <reuseForks>false</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
